ADD info about the lowest price feature; FIX a few small issues noticed

--- a/docs/de-de/modules/artikel/pages/verzeichnis.adoc
+++ b/docs/de-de/modules/artikel/pages/verzeichnis.adoc
@@ -1783,6 +1783,8 @@ IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:preise.adoc#[Ver
 . Gib den Geldbetrag ein.
 . *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
 
+//gif
+
 --
 
 [.collapseBox]
@@ -1798,6 +1800,8 @@ IMPORTANT: Dies setzt voraus, dass du die nötigen xref:artikel:preise.adoc#[Ver
 Klicke dazu auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:refresh[set=material, role="darkGrey"] *Neuladen*. +
 → Die Verkaufspreise und automatisch berechnete Geldbeträge werden als Tabelle dargestellt.
 
+//gif
+
 --
 
 [TIP]
@@ -1808,6 +1812,112 @@ In den Einstellungen des Elements kannst du zwar entscheiden, ob du Brutto- oder
 Dies betrifft jedoch nur die Anzeige.
 Intern werden ausschließlich Bruttopreise in der Datenbank gespeichert.
 ====
+
+[cols="1,4a"]
+|====
+|Einstellung |Erläuterung
+
+| *Preiskalkulation*
+|Du hast die Möglichkeit, deine Preise mit Hilfe einer Preiskalkulation automatisch berechnen zu lassen.
+
+* Wie du eine neue Preiskalkulation erstellst, wird xref:artikel:preise.adoc#1000[hier beschrieben].
+* Wie du eine Preiskalkulation verknüpfst, wird in der obigen Anleitung beschrieben.
+
+| *Verkaufspreis ID*
+|Die ID des verknüpften Verkaufspreises.
+Wie du manuell einen Verkaufspreis verknüpfst und den Geldpreis eingibst, wird in der obigen Anleitung beschrieben.
+
+| *Verkaufspreis*
+|Der Name des verknüpften Verkaufspreises.
+Wie du manuell einen Verkaufspreis verknüpfst und den Geldpreis eingibst, wird in der obigen Anleitung beschrieben.
+
+| *Preis (Brutto)*
+|Der Brutto-Geldpreis.
+
+*_Hinweis_*: Im Element kannst du zwar mit Brutto- oder Nettopreisen arbeiten.
+Dies betrifft jedoch nur die Anzeige.
+Intern werden ausschließlich Bruttopreise in der Datenbank gespeichert.
+
+| *Preis (Netto)*
+|Der Netto-Geldpreis.
+
+*_Hinweis_*: Im Element kannst du zwar mit Brutto- oder Nettopreisen arbeiten.
+Dies betrifft jedoch nur die Anzeige.
+Intern werden ausschließlich Bruttopreise in der Datenbank gespeichert.
+
+| *Währungen*
+|Die Währungen, die für den Verkaufspreis gelten.
+
+*_Hinweis_*: Die Währungen werden in den xref:artikel:preise.adoc#200[Einstellungen des Verkaufspreises] aktiviert.
+
+| *Niedrigster Preis der letzten 30 Tage*
+|Hier siehst du den niedrigsten Preis der Variante innerhalb der letzten 30 Tage.
+Wie du dieses Feld verwendest, wird im Praxisbeispiel weiter unten beschrieben.
+
+*_Hintergrund-Info_*:
+Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden.
+|====
+
+[.collapseBox]
+.*Praxisbeispiel: Niedrigster Preis der letzten 30 Tage*
+--
+
+//änderungen bitte auch in die FAQs der verkaufspreise Seite
+//zukunft - über ein include regeln
+
+*_Hintergrund-Info_*:
+
+Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden:
+
+> > Wer zur Angabe eines Gesamtpreises verpflichtet ist, hat gegenüber Verbrauchern bei jeder Bekanntgabe einer Preisermäßigung für eine Ware den niedrigsten Gesamtpreis anzugeben, den er innerhalb der letzten 30 Tage vor der Anwendung der Preisermäßigung gegenüber Verbrauchern angewendet hat.
+
+---
+
+*_Was Händler tun müssen_*:
+
+Der niedrigste Preis kann manuell in plentymarkets eingegeben, importiert oder automatisch berechnet werden.
+
+IMPORTANT: Zurzeit kann der niedrigste Preis nur im plentymarkets Backend hinterlegt werden.
+Es wird erst ab link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS-Version 5.0.51^] möglich sein, diesen Wert auch im Webshop anzeigen zu lassen.
+
+[.instruction]
+Manuelle Eingabe:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis* icon:arrow_right[set=material, role="darkGrey"] icon:pencil[role="darkGrey"] *Manuelle Eingabe aktivieren*. +
+→ Die Spalte wird editierbar und automatisch mit dem Bruttopreis gefüllt.
+. Gib bei Bedarf einen anderen Wert in die Spalte ein.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+---
+
+[.instruction]
+Automatische Berechnung:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis* icon:arrow_right[set=material, role="darkGrey"] icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Automatische Berechnung aktivieren*. +
+→ Die Spalte wird automatisch mit dem niedrigsten Preis der letzten 30 Tage gefüllt.
+Dieser Wert wird mit Hilfe der xref:artikel:aenderungen.adoc#[Änderungshistorie] berechnet.
+Falls du die Änderungshistorie bisher noch nicht aktiviert hast, erscheint ein Pop-up-Fenster, das dich über die anfallenden Kosten informiert.
+Du musst deine Entscheidung zur Aktivierung der kostenpflichtigen Änderungshistorie bestätigen.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+TIP: Der niedrigste Preis wird automatisch berechnet, etwa 90 Sekunden nachdem du die Einstellung zum ersten Mal aktiviert und gespeichert hast. Danach wird er automatisch einmal pro Nacht berechnet.
+
+---
+
+[.instruction]
+Import:
+
+. Öffne das Menü *Daten » Import*.
+. Erstelle einen neuen Import des Typs *Artikel*.
+. Nutze die Zuordnungsfelder *Variantenpreise / Niedrigster Preis der letzten 30 Tage* und *Variantenpreise / Niedrigsten Preis automatisch berechnen*, um die Einstellungen per Import zu steuern.
+* xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool im Allgemeinen].
+* xref:daten:elasticSync-artikel.adoc#2330[Weitere Informationen zu den Zuordnungsfeldern].
+
+--
 
 ////
 [TIP]
