--- a/docs/de-de/modules/artikel/pages/detailansicht.adoc
+++ b/docs/de-de/modules/artikel/pages/detailansicht.adoc
@@ -8,7 +8,6 @@
 zuletzt bearbeitet 01.03.2022
 ////
 
-//ToDo - once the UI texts are updated, check to make sure the UI texts match the texts in the manual page
 //ToDo - info about adding notes h1, h2, colour
 
 ////
@@ -30,8 +29,7 @@ video::682773880#t=1m57s[vimeo]
 == Benutzeroberfläche anpassen
 
 Wenn du einen xref:artikel:suchen.adoc#100[Artikeldatensatz im plentymarkets Backend öffnest], werden die Artikeldetails im Hauptfenster rechts angezeigt.
-Was aber, wenn das Hauptfenster leer ist?
-Oder was, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
+Was aber, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
 Du kannst eine neue Detailansicht erstellen und sie an deine Bedürfnisse anpassen.
 
 [TIP]
