--- a/docs/de-de/modules/artikel/pages/neue-ui.adoc
+++ b/docs/de-de/modules/artikel/pages/neue-ui.adoc
@@ -41,8 +41,7 @@ Zum Beispiel siehst du ein Bild des Artikels, ob der Artikel aktiv oder inaktiv 
 
 ** *Detailansicht*:
 Wenn du einen Artikel öffnest, werden seine Details im Hauptfenster auf der rechten Seite angezeigt.
-Was aber, wenn das Hauptfenster leer ist?
-Oder was, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
+Was aber, wenn du mit der Anordnung der Artikeldetails nicht zufrieden bist?
 Du kannst eine xref:artikel:detailansicht.adoc#200[neue Detailansicht erstellen] und sie an deine Bedürfnisse anpassen.
 
 == Fragen und Antworten
