--- a/docs/de-de/modules/artikel/pages/preise.adoc
+++ b/docs/de-de/modules/artikel/pages/preise.adoc
@@ -416,6 +416,99 @@ Es gibt verschiedene Möglichkeiten, Verkaufspreise mit Varianten zu verknüpfen
 Alternativ könntest du diese Daten mit Hilfe eines xref:willkommen:assistenten.adoc#[Assistenten] importieren.
 * Anstatt die Geldbeträge manuell einzugeben, willst du vielleicht, dass plentymarkets sie xref:artikel:preise.adoc#1000[automatisch für dich berechnet].
 
+[#950]
+=== Fragen und Antworten
+
+[.collapseBox]
+.*Ich will, dass plentymarkets meine Preise automatisch für mich berechnet. Geht das überhaupt?*
+--
+
+Ja.
+Dies geschieht mit Hilfe einer so genannten Preiskalkulation.
+xref:artikel:preise.adoc#1000[Weitere Informationen].
+
+--
+
+[.collapseBox]
+.*Ein Artikel hat den falschen Preis. Wie kann ich feststellen, wer den Preis geändert hat und wann?*
+--
+
+--
+
+[.collapseBox]
+.*Ich bin verpflichtet, den niedrigsten Preis der letzten 30 Tage anzuzeigen. Wie mache ich das?*
+--
+
+//änderungen bitte auch in die verzeichnis der datenfleder der neue artikel-ui - beim portlet für verkaufspreise
+//zukunft - über ein include regeln
+
+*_Hintergrund-Info_*:
+
+Zum 28.05.2022 tritt eine neue link:https://www.bmwk.de/Redaktion/DE/Downloads/P-R/novelle-der-preisangabenverordnung-pangv.pdf?__blob=publicationFile&v=4[Preisangabenverordnung^] in Kraft.
+In der Verordnung wird in § 11 (1) festgelegt, wie die Preise angegeben werden müssen, wenn Waren ermäßigt werden:
+
+> > Wer zur Angabe eines Gesamtpreises verpflichtet ist, hat gegenüber Verbrauchern bei jeder Bekanntgabe einer Preisermäßigung für eine Ware den niedrigsten Gesamtpreis anzugeben, den er innerhalb der letzten 30 Tage vor der Anwendung der Preisermäßigung gegenüber Verbrauchern angewendet hat.
+
+---
+
+*_Was Händler tun müssen_*:
+
+Der niedrigste Preis kann manuell in plentymarkets eingegeben, importiert oder automatisch berechnet werden.
+
+IMPORTANT: Zurzeit kann der niedrigste Preis nur im plentymarkets Backend hinterlegt werden.
+Es wird erst ab link:https://marketplace.plentymarkets.com/ceres_4697[plentyShop LTS-Version 5.0.51^] möglich sein, diesen Wert auch im Webshop anzeigen zu lassen.
+
+[.instruction]
+Manuelle Eingabe:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis* icon:arrow_right[set=material, role="darkGrey"] icon:pencil[role="darkGrey"] *Manuelle Eingabe aktivieren*. +
+→ Die Spalte wird editierbar und automatisch mit dem Bruttopreis gefüllt.
+. Gib bei Bedarf einen anderen Wert in die Spalte ein.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+---
+
+[.instruction]
+Automatische Berechnung:
+
+. Öffne das Menü *Artikel » Artikel-UI » [Variante öffnen] » Element: Verkaufspreise*.
+. Klicke in einer Zeile auf icon:ellipsis-v[role="darkGrey"] und dann auf icon:sell[set=material, role="darkGrey"] *Niedrigster Preis* icon:arrow_right[set=material, role="darkGrey"] icon:calculate_acquisition_pricepng[set=plenty, role="darkGrey"] *Automatische Berechnung aktivieren*. +
+→ Die Spalte wird automatisch mit dem niedrigsten Preis der letzten 30 Tage gefüllt.
+Dieser Wert wird mit Hilfe der xref:artikel:aenderungen.adoc#[Änderungshistorie] berechnet.
+Falls du die Änderungshistorie bisher noch nicht aktiviert hast, erscheint ein Pop-up-Fenster, das dich über die anfallenden Kosten informiert.
+Du musst deine Entscheidung zur Aktivierung der kostenpflichtigen Änderungshistorie bestätigen.
+. *Speichere* (icon:save[set=plenty, role="darkGrey"]) die Einstellungen.
+
+TIP: Der niedrigste Preis wird automatisch berechnet, etwa 90 Sekunden nachdem du die Einstellung zum ersten Mal aktiviert und gespeichert hast. Danach wird er automatisch einmal pro Nacht berechnet.
+
+---
+
+[.instruction]
+Import:
+
+. Öffne das Menü *Daten » Import*.
+. Erstelle einen neuen Import des Typs *Artikel*.
+. Nutze die Zuordnungsfelder *Variantenpreise / Niedrigster Preis der letzten 30 Tage* und *Variantenpreise / Niedrigsten Preis automatisch berechnen*, um die Einstellungen per Import zu steuern.
+* xref:daten:ElasticSync.adoc#[Weitere Informationen zum Import-Tool im Allgemeinen].
+* xref:daten:elasticSync-artikel.adoc#2330[Weitere Informationen zu den Zuordnungsfeldern].
+
+--
+
+[.collapseBox]
+.*Wie kann ich den UVP als durchgestrichenen Preis im Webshop anzeigen?*
+--
+
+. Öffne das Menü *Einrichtung » Artikel » Verkaufspreise*.
+* Stelle sicher, dass du einen Verkaufspreis hast, bei dem kein Preistyp ausgewählt ist, und einen weiteren Verkaufspreis, bei dem der Preistyp *UVP* ausgewählt ist.
+. Öffne das Menü *Artikel » Artikel bearbeiten » [Variante öffnen] » Tab: Einstellungen » Bereich: Verkaufspreise*.
+* Stelle sicher, dass die Variante mit dem Standard-Verkaufspreis und dem UVP-Preis verknüpft ist.
+* Stelle sicher, dass der UVP-Preis höher ist als der Standardverkaufspreis.
+
+Wenn diese Bedingungen erfüllt sind, wird der UVP im plentyShop durchgestrichen neben dem Verkaufspreis dargestellt.
+
+--
+
 [#1000]
 == Neue Preiskalkulation
 
