--- a/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
+++ b/docs/de-de/modules/auftraege/pages/auftraege-testphase.adoc
@@ -162,18 +162,18 @@ Wenn du noch keine eigene Ansicht erstellt hast, wird der Auftrag mit der Standa
 
 
 [#create-new-view]
-=== Neue Ansicht erstellen
+=== Eine neue Ansicht erstellen
 
-. Gehe ins Menü *Aufträge » Aufträge [Testphase]*. Rechts oben wird die voreingestellte Ansicht angezeigt (Vorlagen: Standardansicht)
-. Klicke auf die Dropdown-Liste der Ansichten (icon:caret-down[role="darkGrey"]).
+. Gehe ins Menü *Aufträge » Aufträge [Testphase]*.
+. Klicke oben rechts auf die Dropdown-Liste der Ansichten (icon:caret-down[role="darkGrey"]).
 . Klicke oben auf icon:plus[role="darkGrey"] *Neue Ansicht erstellen ...*.
-. Gib einen Namen in das sich öffnende Pop up-Fenster ein.
+. Gib einen Namenim Pop up-Fenster ein.
 . Klicke auf *Ansicht erstellen*. +
 → Die neue Ansicht wird erstellt und automatisch geöffnet, d.h. sie wird angewendet.
 Es ist jetzt möglich, zwischen den Ansichten zu wechseln.
 
 image::artikel/neue-ui/assets/detailansicht-neue-ansicht.gif[]
-// TODO: image prüfen, ggf. neu
+// TODO: image anpassen
 
 
 [#create-grid]
@@ -186,7 +186,7 @@ image::artikel/neue-ui/assets/detailansicht-neue-ansicht.gif[]
 .. Ziehe die Spalten, um sie größer oder kleiner zu machen.
 
 image::artikel/neue-ui/assets/detailansicht-raster-erstellen.gif[]
-// TODO: image prüfen
+// TODO: image prüfen anpassen
 
 [#place-elements]
 === Elemente platzieren
@@ -199,7 +199,7 @@ image::artikel/neue-ui/assets/detailansicht-raster-erstellen.gif[]
 . Klicke auf icon:close[role="blue"]
 
 image::artikel/neue-ui/assets/detailansicht-elemente.gif[]
-// TODO: image prüfen
+// TODO: image anpassen
 
 [cols="1,4a"]
 |====
@@ -214,6 +214,8 @@ image::artikel/neue-ui/assets/detailansicht-elemente.gif[]
 | icon:close[role="blue"]
 |Führt eine Ebene höher.
 |====
+
+// TODO: ergänzen um Bearbeitung abschließen
 
 [TIP]
 .Kann ich Elemente mehrfach hinzufügen?
@@ -564,14 +566,14 @@ Diese Option ist standardmäßig deaktiviert. Lass sie deaktiviert, wenn du die 
 Im Menü *Aufträge » Aufträge [Testphase]* steht dir die Übersicht deiner Aufträge zur Verfügung. Die Übersichtstabelle ist durchsuchbar und hat zwei Level. Im ersten Level werden dir grundlegende Auftragsinformationen angezeigt. Im zweiten Level werden dir grundlegende Informationen zu den Auftragspositionen angezeigt. Du kannst die Level ausklappen, indem du auf *Ausklappen* (icon:chevron_right[set=material]) klickst.
 
 ////
-Auf dieser Handbuchseite erhältst du eine Übersicht über
+Auf dieser Handbuchseite erhältst du eine Übersicht über ...
 
 Tabellen individualisieren
 Auftragssuche
 Auftragspositionen
 // TODO: neue Ansicht und weitere Themen
 
-außerdem wird dir erklärt wie du
+außerdem wird dir erklärt wie du ...
 // TODO: Filter und Operatoren
 ////
 
@@ -603,6 +605,7 @@ Wenn du eine Suche ausführst, siehst du die xref:artikel:suchen.adoc#500[Ergebn
 Die Übersicht liefert Informationen zu den gefundenen Aufträgen auf einen Blick.
 Zum Beispiel siehst du ein Bild des Auftrags, ob der ....
 //TODO: xref
+
 
 ** *Detailansicht*:
 Wenn du einen Auftrag öffnest, werden seine Details im Hauptfenster auf der rechten Seite angezeigt.
@@ -1023,7 +1026,7 @@ Angezeigte Filter wählen:
 |====
 |Einstellung |Erläuterung
 
-// TODO: wie kann man die Filter am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu
+// TODO: wie kann man die Filter am besten darstellen? Jetzt: Übergeordnet Gruppe, dann jew. Filter, dann Operatoren dazu; geplant: für ausgewählte Filter in der Ansicht sollen es noch 3 Spalten geben statt wie jetzt 2.
 
 2+^| *Grundlegende*
 
@@ -1065,7 +1068,6 @@ xref:auftraege:auftraege-verwalten.adoc[Aufträge verwalten].
 
 | *Dokumentennummer*
 |Gib eine Dokumentennummer ein.
-
 
 | *Dokumentart*
 |Wähle eine Dokumentart aus der Dropdown-Liste. 
@@ -1125,12 +1127,33 @@ IN (grau, keine andere Option)
 ////
 alte UI: Gutschein-Code: Alle, eingelöst, verkauft 
 
+als Tabelle
 Operatoren:
-IN = mehrfach
-= genau
+
+*Ist in (IN)*
+IN = mehrfach möglich
+= genau gleich
+≈ ungefähr; als Platzhalter, Eingabe z.B. Bau* oder *ab*, im Englischen „wildcard character“, ist ein Sonderzeichen, das ein oder mehrere andere Zeichen darstellt. Die am häufigsten verwendeten Platzhalterzeichen sind das Sternchen (*)
+
 wenn nichts gewählt, leere Option, dann ALLE - siehe alte UI
 IN grau heißt keine andere Option
 IN schwarz heißt anderes wählen
+
+*Ist gleich (=)* heißt, der Wert muss genau gleich sein
+= Ist gleich. Beispiel: Suche nach xy mit der ID 10.
+Hinweis: mehrere IDs...
+
+Ist kleiner
+
+*Ist kleiner-gleich (<=)* heißt, der Wert muss gleich oder kleiner sein
+<= Ist kleiner oder gleich. Beispiel: Suche nach allen xy, deren IDs kleiner oder gleich 10 sind, z.B. 7,8,9,10.
+
+Ist größer
+
+*Ist größer-gleich (>=)* heißt, der Wert muss gleich oder größer sein
+>= Ist größer oder gleich. Beispiel: Suche nach allen xy, deren IDs größer oder gleich 10 sind, z.B. 10,11,12,13.
+
+*Ist zwischen ([])* heißt, der Wert liegt zwischen x und y
 ////
 
 2+^| *Datum*
@@ -1414,7 +1437,7 @@ Gruppenfunktion mit der MyView nutzen:
 * Lieferdatum für Auftrag setzen
 * Versanddatum für Auftragspositionen setzen
 
-// TODO: Prüfen, ist in Arbeit, ergänzen, aktueller Stand 04.05.22
+// TODO: Prüfen, ist in Arbeit, ergänzen, Stand 04.05.22
 
 
 [[table-group-functions]]
@@ -1422,7 +1445,7 @@ Gruppenfunktion mit der MyView nutzen:
 [cols="1,2"]
 |====
 |Einstellung |Erläuterung
-// TODO: Text prüfen
+// TODO: Text und Links prüfen
 | *Aufträge gruppieren*
 | Mit der Gruppenfunktion *Aufträge gruppieren* (icon:library_add_check[set=material]) kannst du einzelne Aufträge in einem neuen Auftrag zusammenfassen indem du sie gruppierst. Das Verhalten beim Gruppieren ist abhängig von deiner <<auftraege/grundeinstellungen#intable-behaviour-after-grouping, Grundeinstellung>> dafür. Im Standardverhalten werden die ursprünglichen Aufträge beim Gruppieren gelöscht. Die Versandkosten werden dann für den neuen Auftrag neu berechnet. Damit Aufträge gruppiert werden können, müssen sie folgende Kriterien erfüllen: +
 - Die Aufträge dürfen nicht gesperrt sein. +
@@ -1518,6 +1541,16 @@ Mehrere Aufträge über die Gruppenfunktion bearbeiten:
 // TODO: für alle Auftragstypen sind die ersten Schritte gleich sowie die spätere Ansicht (mit leicht unterschiedlichen Feldern). 
 
 == Auftragstypen
+////
+|Wähle aus, welchen Typ von Warenkorb du in der Auftragserstellung nutzen möchtest. Standardmäßig ist der Side cart ausgewählt. Die Funktionen im Warenkorb sind bei beiden Typen gleich. +
+*Warenkorb als Side cart* = Der Warenkorb wird seitlich als Overlay dargestellt, wenn man ihn öffnet. +
+*Warenkorb als Tabelle (unterhalb der Suchergebnisse)* = Der Warenkorb wird als Tabelle unterhalb der Artikeltabelle (generiert durch die Artikelsuche) dargestellt.
+////
+
+== Lieferauftrag
+
+== Angebot
+
 
 == Retoure
 
@@ -1610,7 +1643,6 @@ include::partial$tabelle-aus-optionen-anlegen.adoc[]
 | *Paketcode der Retoure*
 |Paketcode der Retoure eintragen.
 
-
 |*Status*
 |Wähle einen Status aus der Dropdown-Liste, z.B. Waren auf Zahlung. +
 Diese Spalte ist eine Standardspalte.
@@ -1660,8 +1692,7 @@ Nachdem eine Retoure erfasst wurde, kannst du den Artikelstatus für retourniert
 
 |====
 
-// TODO: gehört das hier dazu?
-
+// TODO: gehört das auf diese Seite?
 [#create-return-note]
 === Rücksendeschein erstellen
 
@@ -1723,8 +1754,6 @@ Gehe wie beschrieben vor, um eine Reparatur anzulegen:
 
 . Öffne das Menü *Aufträge (Testphase) » Aufträge*.
 . Öffne die Retoure, zu der du eine Reparatur anlegen möchtest.
-// TODO: Schritte beschreiben analog zu Retoure
-
 ////
 ausformulieren
 . Klicke auf die Dropdown-Liste *Reparatur* und dort auf die Einstellung *anlegen*. + Wo ??
