--- a/docs/en-gb/modules/crm/pages/edit-contact.adoc
+++ b/docs/en-gb/modules/crm/pages/edit-contact.adoc
@@ -8,7 +8,7 @@ xref:crm:create-contact.adoc#[icon:long-arrow-left[] Creating a contact]
 
 '''
 
-Once you have xref:crm:create-contact.adoc#[created] a contact, you can add further details to the <<##details-individual-areas, various areas of the contact data record>>. To do so, you can <<#edit-view, create your own view>> or use one of the <<#default-views-templates, templates>> that are available in your system by default.
+Once you have xref:crm:create-contact.adoc#[created] a contact, you can add further details to the <<#details-individual-areas, various areas of the contact data record>>. To do so, you can <<#edit-view, create your own view>> or use one of the <<#default-views-templates, templates>> that are available in your system by default.
 
 Note also the <<#group-function, group function>> that you can use to easily and quickly carry out different actions for multiple contacts at once.
 
