--- a/docs/en-gb/modules/item/pages/manually-create-item.adoc
+++ b/docs/en-gb/modules/item/pages/manually-create-item.adoc
@@ -5,7 +5,7 @@
 :author: team-item
 
 ////
-zuletzt bearbeitet 11.03.22
+zuletzt bearbeitet 16.05.22
 ////
 
 //ToDo - gifs erstellen
@@ -325,31 +325,62 @@ Click on the URL to open the page in a new tab.
 Click on icon:copy[set=plenty, role="darkGrey"] to copy the URL to the clipboard.
 
 | *Sales channel*
-|Do you want to see a preview of the product in your plentyShop or on Amazon?
+|Do you want to see what the product will look like in your plentyShop or on Amazon?
 
-* *Ceres LTS* = You will see a preview in the plentyShop.
-* *Amazon* = You will see a preview on Amazon.
+[cols="1,4a"]
+!===
+
+! *plentyShop LTS Preview*
+!
+You will see a preview in the plentyShop.
+Possible use-cases:
+
+* You want to check what a product will look like in the plentyShop before you make it visible for your end customers.
+* You are currently re-designing your plentyShop and you want to check what a product would look like with a different plugin set.
+
+*_Additional settings_*: Also select the client and the plugin set.
+
+! *plentyShop LTS live*
+!
+You will see what the product currently looks like in the plentyShop.
+Possible use-case:
+
+* You want to check which prices and information are displayed when end customers access your plentyShop via a specific price comparison portal.
+
+*_Additional settings_*: Also select the client and the referrer.
+
+! *Amazon*
+!You will see a preview on Amazon.
 Make sure that you have already saved an ASIN for the variation.
 The preview can only be generated if the variation has an ASIN.
 
-| *Client (store)* +
-(Ceres LTS)
+!===
+
+| *Client (store)*
 |Which client, i.e. which webshop, do you want to see the preview in?
 Select the client from the drop-down list.
 
 *_Background info_*: With plentymarkets, you can manage several online stores, i.e. xref:online-store:setting-up-clients.adoc#[several clients], with only one software.
 Consequently, it is possible to manage several different areas of business with one plentymarkets system.
 
-| *Plugin set* +
-(Ceres LTS)
+*_Note_*: This option is only displayed if you chose the sales channel *plentyShop LTS Preview* or *plentyShop LTS live*.
+
+| *Plugin set*
 |Which plugin set do you want to see the preview in?
 Select the plugin set from the drop-down list.
 
 *_Background info_*: plentymarkets doesn't consider each xref:plugins:plugins.adoc#[plugin] in a vacuum, but compiles them in so-called plugin sets.
 For example, plugin sets allow you to design seasonal layouts for your plentyShop or test new versions of plugins before switching them live.
 
-| *ASIN* +
-(Amazon)
+*_Note_*: This option is only displayed if you chose the sales channel *plentyShop LTS Preview*.
+
+| *Referrer*
+|Do you want to check which prices and information are displayed when end customers access your plentyShop via a specific price comparison portal?
+Select the referrer from the drop-down list.
+
+*_Note_*: This option is only displayed if you chose the sales channel *plentyShop LTS live*.
+
+| *ASIN*
 |Which ASIN do you want to use for the preview?
 Select the ASIN from the drop-down list.
 
@@ -357,6 +388,8 @@ Select the ASIN from the drop-down list.
 You haven't saved an ASIN for the variation yet?
 Or you haven't selected an ASIN from the drop-down list?
 Then you will see an error message in the info box up top.
+
+*_Note_*: This option is only displayed if you chose the sales channel *Amazon*.
 
 |====
 
