--- a/docs/en-gb/modules/data/pages/setup-use.adoc
+++ b/docs/en-gb/modules/data/pages/setup-use.adoc
@@ -651,7 +651,7 @@ The following filters are available to filter orders before the export. Combine 
 |Limits the export to orders for which the items were booked out on a specific date. After adding this filter, select a specific date or a period of time by using the operators and the date picker.
 
 |*Contact group*
-|Limits the export to orders that contain the selected xref:crm:managing-contacts.adoc#15[customer classes].
+|Limits the export to orders that contain the selected xref:crm:preparatory-settings.adoc#create-customer-class[customer classes].
 
 |*Contact ID*
 |By setting an operator and entering a contact ID you determine to which orders the export should be limited. Orders are always filtered for the entered contact ID. +
