correct filter description

--- a/docs/de-de/modules/daten/partials/catalogue-overview.adoc
+++ b/docs/de-de/modules/daten/partials/catalogue-overview.adoc
@@ -59,7 +59,7 @@ icon:filter_alt[set=material]
 ! Reduziert die Liste auf Kataloge dieses Template-Typs. 
 
 ! *Template-Name*
-! Reduziert die Liste auf Kataloge, die diesen Namen haben. 
+! Reduziert die Liste auf Kataloge, die auf diesem Template beruhen. 
 
 ! *Name*
 ! Reduziert die Liste auf Kataloge mit diesem Namen. 
