--- a/docs/en-gb/modules/data/partials/catalogue-overview.adoc
+++ b/docs/en-gb/modules/data/partials/catalogue-overview.adoc
@@ -59,7 +59,7 @@ icon:filter_alt[set=material]
 ! Reduces the list to catalogues with this template type. 
 
 ! *Template-Name*
-! Reduces the list to catalogues with this name. 
+! Reduces the list to catalogues that are based on a template with this name. 
 
 ! *Name*
 ! Reduces the list to catalogues with this name. 
