--- a/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
+++ b/docs/de-de/modules/maerkte/pages/amazon-fba-nutzen.adoc
@@ -778,7 +778,7 @@ Die Auftragsstatus *Offen*, *Erledigt* und *Alle* stehen zur Verfügung. +
 |Die farbigen Punkte zeigen den Status der versendeten Artikel: +
 Grün: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Alle versendeten Artikel wurden erhalten. +
 Gelb: Die Sendung befindet sich im Status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* oder *CHECKED_IN*. Die versendeten Artikel befinden sich noch in Bearbeitung. +
-Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Allerdings wurden nicht alle versendeten Artikel wurden erhalten.
+Rot: Die Sendung befindet sich im Status *RECEIVING* oder *CLOSED*. Allerdings wurden nicht alle versendeten Artikel erhalten.
 
 | *Sendungsstatus*
 a|Der Status, in dem sich die Amazon-Sendung aktuell befindet. Die folgenden, bei Amazon verfügbaren Status werden hier angezeigt: +
