--- a/docs/en-gb/modules/markets/pages/amazon-fba.adoc
+++ b/docs/en-gb/modules/markets/pages/amazon-fba.adoc
@@ -779,7 +779,7 @@ The order statuses *Open*, *Done* and *All* are available. +
 |The coloured dots show the status of the shipped items: +
 green: The shipment has the status *RECEIVING* or *CLOSED*. All shipped items have been received. +
 yellow: The shipment has the status *WORKING*, *SHIPPED*, *IN_TRANSIT*, *DELIVERED* or *CHECKED_IN*. The shipped items are still being processed. +
-red: The shipment has the status *RECEIVING* or *CLOSED*. Not all shipped items have been received.
+red: The shipment has the status *RECEIVING* or *CLOSED*. However, not all shipped items have been received.
 
 | *Shipment status*
 a|The current status of the Amazon shipment. The following statuses available at Amazon are shown here: +
