ADD english translation and descriptions of import fields

--- a/docs/en-gb/modules/data/pages/elasticSync-item.adoc
+++ b/docs/en-gb/modules/data/pages/elasticSync-item.adoc
@@ -1197,6 +1197,56 @@ Also use the drop-down list to select the sales price.
 You can find the result of the import in the back end menu: xref:item:managing-items.adoc#240[Item » Edit item » [Open variation\] » Tab: Settings » Area: Sales prices]
 
 '''
+
+[#1031]
+==== Lowest price in the last 30 days
+
+Do you want to manually enter the variation's lowest price from the last 30 days?
+Enter the monetary price into your CSV file.
+xref:item:prices.adoc#950[Learn more about the "lowest price" function].
+
+*_Default value_*: No default value
+
+*_Permitted import values_*: Numeric
+
+*_Note_*: Use the same decimal notation as in the xref:data:ElasticSync.adoc#1300[import options].
+
+[TIP]
+Also use the drop-down list to select the sales price.
+
+You can find the result of the import in the back end menu: *Item » Item UI » [Open variation] » Element: Sales prices » Column: Lowest price during the last 30 days*
+
+'''
+
+[#1032]
+==== Calculate lowest price automatically
+
+Do you want to automatically calculate the variation's lowest price from the last 30 days?
+Enter your answer into the CSV file.
+xref:item:prices.adoc#950[Learn more about the "lowest price" function].
+
+*_Default value_*: `0`
+
+[cols="1,1"]
+|====
+|Permitted import values in CSV file |Result in the back end
+
+|`0`
+|No.
+The lowest price will _not_ automatically be calculated.
+
+|`1`
+|Yes.
+The lowest price will automatically be calculated.
+|====
+
+[TIP]
+Also use the drop-down list to select the sales price.
+
+You can find the result of the import in the back end menu: *Item » Item UI » [Open variation] » Element: Sales prices » Column: Lowest price during the last 30 days*
+
+'''
+
 [#1033]
 ==== Last change
 
