--- a/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
+++ b/docs/de-de/modules/daten/pages/elasticSync-artikel.adoc
@@ -1197,6 +1197,56 @@ Stelle mithilfe der Dropdown-Liste auch den Verkaufspreis ein.
 Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:artikel-verwalten.adoc#240[Artikel » Artikel bearbeiten » [Variante öffnen\] » Tab: Einstellungen » Bereich: Verkaufspreise]
 
 '''
+
+[#1031]
+==== Niedrigster Preis der letzten 30 Tage
+
+Willst du den niedrigsten Preis der Variante während der letzten 30 Tage manuell eingeben?
+Gib den Geldbetrag in deine CSV-Datei ein.
+xref:artikel:verzeichnis.adoc#340[Erfahre mehr über die Funktion "niedrigster Preis"].
+
+*_Standardwert_*: Kein Standardwert
+
+*_Zulässige Importwerte_*: Numerisch
+
+*_Hinweis_*: Verwende die gleiche Dezimal-Schreibweise wie in den xref:daten:ElasticSync.adoc#1300[Importoptionen].
+
+[TIP]
+Stelle mithilfe der Dropdown-Liste auch den Verkaufspreis ein.
+
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:verzeichnis.adoc#340[Artikel » Artikel-UI » [Variante öffnen\] » Element: Verkaufspreise » Spalte: Niedrigster Preis der letzten 30 Tage]
+
+'''
+
+[#1032]
+==== Niedrigsten Preis automatisch berechnen
+
+Willst du den niedrigsten Preis der Variante während der letzten 30 Tage automatisch berechnen lassen?
+Gib deine Antwort in die CSV-Datei ein.
+xref:artikel:verzeichnis.adoc#340[Erfahre mehr über die Funktion "niedrigster Preis"].
+
+*_Standardwert_*: `0`
+
+[cols="1,1"]
+|====
+|Zulässige Importwerte in CSV-Datei |Ergebnis im Backend
+
+|`0`
+|Nein.
+Der niedrigste Preis wird _nicht_ automatisch berechnet.
+
+|`1`
+|Ja.
+Der niedrigste Preis wird automatisch berechnet.
+|====
+
+[TIP]
+Stelle mithilfe der Dropdown-Liste auch den Verkaufspreis ein.
+
+Das Ergebnis des Imports findest du im Backend im Menü: xref:artikel:verzeichnis.adoc#340[Artikel » Artikel-UI » [Variante öffnen\] » Element: Verkaufspreise » Spalte: Niedrigster Preis der letzten 30 Tage]
+
+'''
+
 [#1033]
 ==== Letzte Änderung
 
