fix some contact links after testing

--- a/docs/en-gb/modules/crm/pages/messenger.adoc
+++ b/docs/en-gb/modules/crm/pages/messenger.adoc
@@ -6,7 +6,7 @@
 
 Use the messenger to create notes about your contacts in the back end. These notes are only visible in your plentymarkets back end and _cannot_ be accessed by your contacts.
 
-On this page of the manual, you learn how to <<#new-message, create>> new messages for your contact, <<#display-messages, display all messages>> that are available for your contact as well as <<#edit-message, edit>> and <<#delete-message, delete>> existing messages.
+On this page of the manual, you learn how to <<#create-message, create>> new messages for your contact, <<#display-messages, display all messages>> that are available for your contact as well as <<#edit-message, edit>> and <<#delete-message, delete>> existing messages.
 
 [#preparatory-settings]
 == Preparatory settings
