--- a/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-erstellen.adoc
@@ -12,7 +12,7 @@ xref:crm:kontakt-bearbeiten.adoc#[Kontakt bearbeiten icon:long-arrow-right[]]
 Du möchtest ganz einfach, schnell und mit einer individuell anpassbaren Bedienoberfläche neue Kontakte zum Beispiel während eines Telefonats erstellen? Richte dir zunächst eine <<#ansicht-einrichten, neue Ansicht>> ganz nach deinen Wünschen ein.
 
 [#ansicht-einrichten]
-== Ansicht einrichten
+== Ansicht erstellen
 
 Die Bedienoberfläche zum Erstellen eines neuen Kontakts erlaubt dir viel Flexibilität beim Anordnen von Inhalten und Daten. Grundsätzlich platzierst du Darstellungsbereiche und Elemente intuitiv per Drag-and-drop. Jeder Bereich und jedes Element kann per Klick auf *Ansicht bearbeiten* (icon:design_inline_edit[set=plenty]) oben rechts im Kontaktdatensatz weiter bearbeitet werden. <<#table-functions-new-contact>> enthält einen Überblick über die Funktionen, die im Bearbeitungsmodus des Kontaktdatensatzes zur Verfügung stehen.
 
