TEST different possibilities for table headers

--- a/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
+++ b/docs/de-de/modules/artikel/pages/artikel-manuell-anlegen.adoc
@@ -74,11 +74,11 @@ Einen neuen Artikel erstellen:
 
 :manual:
 
-[cols="1,4a"]
-|====
+[cols="1s,4a"]
+|===
 |Einstellung |Erläuterung
 
-//|[#intable-typ]*Typ*
+//|[#intable-typ]Typ
 //a|Welche Art von Artikel willst du erstellen? In den meisten Fällen wirst du wahrscheinlich einen "normalen Artikel" erstellen, d.h. einen Artikel vom Typ *Standard*.
 
 //Die anderen Optionen in der Dropdown-Liste sind für andere Anwendungsfälle vorgesehen:
@@ -89,24 +89,24 @@ Einen neuen Artikel erstellen:
 
 //*_Hinweis_*: Diese Einstellung kann nach der Artikelanlage nicht mehr geändert werden.
 
-| *Name* +
-[red]#(Pflichtfeld)#
+| Name +
+[red]#*(Pflichtfeld)*#
 |Gib einen Namen für den Artikel ein.
 
 *_Hinweis_*:
 Nachdem du den Artikel erstellt hast, kannst du den Namen in weitere Sprachen übersetzen oder auch weitere Namen hinzufügen, z.B. wenn der Artikel auf Marktplätzen anders genannt werden soll.
 
-|====
+|===
 
 [discrete]
 ==== Schritt: Kategorien
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Kategorien wählen* +
-[red]#(Pflichtfeld)#
+| Kategorien wählen +
+[red]#*(Pflichtfeld)*#
 a|In welche Kategorie soll der Artikel einsortiert werden?
 
 . Klicke auf *Kategorien wählen*. +
@@ -118,7 +118,7 @@ Klicke auf icon:delete[set=material, role="darkGrey"], um eine Kategorie aus die
 
 *_Hinweis_*: Diese Liste enthält nur die xref:artikel:kategorien.adoc#[Kategorien], die du bereits in plentymarkets angelegt hast.
 
-|====
+|===
 
 [discrete]
 ==== Schritt: Hauptvariante (Optional)
@@ -130,18 +130,18 @@ Die erste Variante eines Artikels wird als Hauptvariante bezeichnet.
 Hat ein Artikel mehrere Varianten, kann die Hauptvariante entweder selbst ein verkaufbares Produkt sein oder rein virtuell bestehen, um die weiteren Untervarianten des Artikels anhand von Vererbung zu verwalten.
 ====
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Variantennr.*
+| Variantennr.
 |Gib eine Nummer für die Hauptvariante ein.
 
-| *Inhalt* +
-*Einheit*
+| Inhalt +
+Einheit
 |Gib einen numerischen Wert für die Hauptvariante ein und wähle eine Einheit aus der Dropdown-Liste, z.B. 500ml oder 150g.
 
-| *Attribute wählen*
+| Attribute wählen
 a|Die Hauptvariante kann entweder selbst ein verkaufbares Produkt sein oder rein virtuell bestehen, um die weiteren Untervarianten des Artikels anhand von Vererbung zu verwalten.
 Das heißt, die Hauptvariante kann Attribute besitzen, muss es aber nicht.
 
@@ -158,36 +158,36 @@ Klicke auf icon:delete[set=material, role="darkGrey"], um einen Attributwert aus
 Vielmehr empfehlen wir dir, zuerst den neuen Artikel ohne Attribute anzulegen. Anschließend empfehlen wir dir, Attribute auszuwählen, während du die xref:artikel:artikel-manuell-anlegen.adoc#300[benötigten Varianten erstellst]. +
 Warum? Verknüpfst du Attribute bereits jetzt mit der Hauptvariante, müssen alle folgenden Varianten zwangsläufig aus den gleichen Attributen erzeugt werden. Dies ist nicht der Fall, wenn du Attribute erst bei der Variantenanlage verknüpfst.
 Im Nachhinein bist du also flexibler.
-|====
+|===
 
 [discrete]
 ==== Schritt: Fertig
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Zusammenfassung*
+| Zusammenfassung
 a|Hier siehst du eine Zusammenfassung deiner gewählten Einstellungen.
 Klicke auf *Artikel erstellen*, wenn du mit den Angaben einverstanden bist.
 
 Nach der Erstellung hast du folgende Möglichkeiten:
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *Zum Artikel*
+! Zum Artikel
 !Das Pop-up-Fenster wird geschlossen und der neu erstellte Artikeldatensatz wird zur weiteren Bearbeitung geöffnet.
 
-! *Weiteren Artikel erstellen*
+! Weiteren Artikel erstellen
 !Das Pop-up-Fenster wird für den nächsten Artikel neu gestartet.
 
-! *Schliessen*
+! Schliessen
 !Das Pop-up-Fenster wird geschlossen.
 
 !===
 
-|====
+|===
 
 [#300]
 == Benötigte Varianten erstellen
@@ -209,12 +209,12 @@ Benötigte Varianten erstellen:
 [discrete]
 ==== Schritt: Einstellungen
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Inhalt* +
-*Einheit*
+| Inhalt +
+Einheit
 a|Nutze diesen Bereich, wenn die Varianten sich durch ihre Menge und/oder Einheit unterscheiden sollen.
 
 *_Beispiel_*: Eine Seife, die in 100ml, 250ml und 500ml erhältlich ist.
@@ -225,7 +225,7 @@ a|Nutze diesen Bereich, wenn die Varianten sich durch ihre Menge und/oder Einhei
 . Klicke auf *Varianten erstellen*.
 . Wiederhole den Vorgang für 250ml und für 500ml.
 
-| *Attribute auswählen*
+| Attribute auswählen
 a|Nutze diesen Bereich, wenn die Varianten sich durch ihre Attributwerte unterscheiden sollen.
 
 *_Beispiel_*: Ein T-Shirt, das in der Farbe grün oder blau und in der Größe S, M oder L erhältlich ist.
@@ -243,38 +243,38 @@ Klicke auf icon:pencil[role="darkGrey"] *Attribute auswählen*, wenn du deine Au
 
 *_Hinweis_*: Diese Liste enthält nur die xref:artikel:attribute.adoc#[Attribute und Werte], die du bereits in plentymarkets angelegt hast.
 
-|====
+|===
 
 [discrete]
 ==== Schritt: Vorschau
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Vorschau*
+| Vorschau
 |Nutze diesen Bereich, wenn du dich vergewissern willst, dass die Kombinationen korrekt sind.
 
 *_Beispiel_*: Die Größen "S", "M", "L" kombiniert mit den Farben "grün" und "blau" ergeben 6 Varianten.
 
 *_Hinweis_*: Oberhalb der Tabelle siehst du, wie viele Kombinationen erstellt werden.
 Es gibt keine Begrenzung, wie viele Kombinationen möglich sind.
-|====
+|===
 
 [discrete]
 ==== Schritt: Zusammenfassung
 
-[cols="1,4"]
-|====
+[cols="1s,4"]
+|===
 |Einstellung |Erläuterung
 
-| *Zusammenfassung*
+| Zusammenfassung
 |Hier siehst du eine Bestätigung, dass die Varianten erstellt wurden.
 
 *_Hinweis_*:
 Es kann einige Minuten dauern, bis die neuen Varianten in der Übersicht erscheinen.
 
-|====
+|===
 
 [#400]
 == Weitere Produktdaten hinzufügen
@@ -312,22 +312,22 @@ Du kannst den Produkt-Link für einen Artikel oder für eine Variante aufrufen.
 Der Produkt-Link Button befindet sich in der Toolbar der Artikel- und Variantenansicht.
 ====
 
-[cols="1,4a"]
-|====
+[cols="1s,4a"]
+|===
 |Einstellung |Erläuterung
 
-| *URL*
+| URL
 |Die URL des Produkts wird oben in einer Info-Box angezeigt.
 Klicke auf die URL, um die Seite in einem neuen Tab zu öffnen.
 Klicke auf icon:copy[set=plenty, role="darkGrey"], um die URL in die Zwischenablage zu kopieren.
 
-| *Verkaufskanal*
+| Verkaufskanal
 |Möchtest du sehen, wie das Produkt in deinem plentyShop oder auf Amazon aussehen wird?
 
-[cols="1,4a"]
+[cols="1s,4a"]
 !===
 
-! *plentyShop LTS Preview*
+! plentyShop LTS Preview
 !
 Du siehst eine Vorschau im plentyShop.
 Mögliche Anwendungen:
@@ -337,7 +337,7 @@ Mögliche Anwendungen:
 
 *_Weitere Einstellungen_*: Wähle auch den Mandanten und das Plugin-Set.
 
-! *plentyShop LTS live*
+! plentyShop LTS live
 !
 Du siehst, wie das Produkt aktuell im plentyShop aussieht.
 Mögliche Anwendung:
@@ -346,14 +346,16 @@ Mögliche Anwendung:
 
 *_Weitere Einstellungen_*: Wähle auch den Mandanten und die Herkunft.
 
-! *Amazon*
+! Amazon
 !Du siehst eine Vorschau auf Amazon.
 Stelle sicher, dass du bereits eine ASIN für die Variante hinterlegt hast.
 Die Vorschau kann nur dann erstellt werden, wenn die Variante eine ASIN hat.
 
+*_Weitere Einstellung_*: Wähle auch die ASIN.
+
 !===
 
-| *Mandant (Shop)*
+| Mandant (Shop)
 |In welchem Mandanten, d.h. in welchem Webshop, willst du die Vorschau sehen?
 Wähle den Mandanten aus der Dropdown-Liste aus.
 
@@ -362,7 +364,7 @@ Somit ist es möglich, über ein plentymarkets System mehrere unterschiedliche G
 
 *_Hinweis_*: Diese Option wird nur angezeigt, wenn du den Verkaufskanal *plentyShop LTS Preview* oder *plentyShop LTS live* gewählt hast.
 
-| *Plugin-Set*
+| Plugin-Set
 |In welchem Plugin-Set willst du die Vorschau sehen?
 Wähle das Plugin-Set aus der Dropdown-Liste aus.
 
@@ -371,13 +373,13 @@ So kannst du zum Beispiel saisonale Layouts für deinen plentyShop gestalten ode
 
 *_Hinweis_*: Diese Option wird nur angezeigt, wenn du den Verkaufskanal *plentyShop LTS Preview* gewählt hast.
 
-| *Herkunft*
+| Herkunft
 |Willst du prüfen, welche Preise und Informationen angezeigt werden, wenn Endkunden deinen plentyShop über ein bestimmtes Preisportal aufrufen?
 Wähle die Herkunft aus der Dropdown-Liste aus.
 
 *_Hinweis_*: Diese Option wird nur angezeigt, wenn du den Verkaufskanal *plentyShop LTS live* gewählt hast.
 
-| *ASIN*
+| ASIN
 |Welche ASIN möchtest du für die Vorschau verwenden?
 Wähle die ASIN aus der Dropdown-Liste aus.
 
@@ -388,7 +390,7 @@ Dann siehst du eine Fehlermeldung in der Info-Box oben.
 
 *_Hinweis_*: Diese Option wird nur angezeigt, wenn du den Verkaufskanal *Amazon* gewählt hast.
 
-|====
+|===
 
 [#600]
 == Produkte für den Verkauf freigeben
