add permissions for missing portlets in contact ui

--- a/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
+++ b/docs/de-de/modules/crm/pages/kontakt-bearbeiten.adoc
@@ -207,6 +207,13 @@ Wenn du im Kontaktdatensatz auf der linken Seite in der Navigation auf den jewei
 Die folgenden Bereiche werden erst nach einem Klick in der Navigation auf der linken Seite geladen und geöffnet: *Dokumente*, *Eigenschaften*, *Tags*, *plentyShop-Login*, *Adressen*, *Historie*, *Bankdaten*, *Konto*, *Messenger*, und *Tickets*. 
 ====
 
+[IMPORTANT]
+.Backend-Benutzer:innen: Fehlende Rechte für bestimmte Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz?
+====
+Wenn eine Person mit *Backend*-Zugriffsrechten bestimmte Bereiche und/oder darin enthaltene Schaltflächen und Funktionen im Kontaktdatensatz nicht sehen kann, muss eine Person mit *Admin*-Zugriffsrechten weitere Rechte im Benutzer:innenkonto im Menü *Einrichtung » Einstellungen » Benutzer » Rechte » Benutzer* aktivieren. +
+Alle benötigten Rechte für die einzelnen Bereiche, Schaltflächen und Funktionen im Kontaktdatensatz findest du auf der Handbuchseite xref:crm:vorbereitende-einstellungen.adoc#[Vorbereitende Einstellungen] im Kapitel xref:crm:vorbereitende-einstellungen.adoc#ansichten-freigeben-bereiche-schaltflaechen[Ansichten für bestimmte Bereiche und Schaltflächen im Kontaktdatensatz freigeben].
+====
+
 * <<#kontaktdetails, Kontaktdetails>>
 * <<#primaere-adresse, Primäre Adresse>>
 * <<#dokumente, Dokumente>>
@@ -804,6 +811,7 @@ Hier siehst du die dem Kontakt zugeordnete Firma bzw. kannst dem Kontakt eine Fi
 TODO: wording bzgl. "verknüpft" und "zugeordnet" vereinheitlichen; dazu auch in der Firmen-UI schauen.
 ////
 
+[#firma-noch-nicht-verknuepft]
 ==== Firma ist noch nicht verknüpft
 
 Wenn dem Kontakt noch keine Firma zugeordnet wurde, hast du 2 Möglichkeiten:
@@ -818,16 +826,20 @@ image::crm:kontakte-firma-verknuepfung-erstellen.png[width=640, height=360, alt=
 
 Weitere Informationen zum Erstellen von Firmendatensätzen findest du auf der Handbuchseite xref:crm:firmen.adoc#firma-erstellen[Firmen].
 
+[#firma-bereits-verknuepft]
 ==== Firma ist bereits verknüpft
 
+[#firma-bearbeiten]
 ===== Firma bearbeiten
 
 Klicke in der Zeile der Firma, um den Firmendatensatz im Menü *CRM » Firmen* zu öffnen und die Firmendaten zu bearbeiten.
 
+[#verknuepfung-firma-loeschen]
 ===== Verknüpfung zur Firma löschen
 
 Klicke in der Zeile der Firma auf icon:more_vert[set=material] und dann auf icon:delete[set=material] *Verknüpfung zur Firma löschen*, um die Verknüpfung zwischen Kontakt und Firma zu entfernen.
 
+[#neue-firma-verknuepfen]
 ===== Neue Firma verknüpfen
 
 Mit einem Klick auf *Neue Firma hinzufügen* (icon:add[set=material]) öffnet sich ein neues Fenster, in dem du eine Firma hinzufügen kannst. Nachdem du alle Felder in dem xref:crm:firmen.adoc#firma-erstellen[neuen Firmendatensatz] ausgefüllt hast und die Einstellungen gespeichert hast, wird der Kontakt der Firma automatisch zugeordnet. +
@@ -836,6 +848,7 @@ Mit einem Klick auf *Neue Firma hinzufügen* (icon:add[set=material]) öffnet si
 Nachdem du die Daten im <<#kontaktdatensatz-neu-laden, Kontaktdatensatz neu geladen>> hast, ist die neue Firma auch in der Übersicht sichtbar. +
 *_Wichtig:_* Die Verknüpfung zu der vorherigen Firma wird entfernt.
 
+[spalten-firmenuebersicht]
 ==== Spalten in Firmenübersicht konfigurieren
 
 Mit einem Klick auf *Spalten konfigurieren* (icon:settings[set=material]) oben rechts entscheidest du, welche Spalten im Bereich *Firma* angezeigt werden. Klicke auf icon:sort[set=material], um die Reihenfolge der Spalten per Drag-and-drop zu verschieben. Die folgenden Spalten sind verfügbar:
