--- a/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/wareneingaenge-verwalten.adoc
@@ -3,6 +3,7 @@
 :description: Du hast gerade eben Waren von deinem Lieferanten erhalten. Was nun? Auf dieser Seite lernst du, wie du den Bestand in plentymarkets einbuchen kannst.
 :id: D1FCJJV
 :author: team-stock
+:stem: latexmath
 
 Es gibt verschiedene Wege, über die du Waren in dein System buchen kannst.
 Voraussetzung für einen Wareneingang ist, dass der Variante ein Lager, ein Lagerort und ein:e Lieferant:in zugeordnet sind.
@@ -13,12 +14,13 @@ Nur wenn du Wareneingänge und Warenausgänge buchst und so Warenbestände in pl
 [#250]
 == Einkaufspreis ermitteln
 
-Die Einstellungen zum Einkaufspreis in plentymarkets sind vielfältig. In Varianten werden dir 2 verschiedene Einkaufspreise angezeigt. Ein Feld zeigt immer den gleitenden Einkaufspreis. Welcher Einkaufspreis im 2. Feld angezeigt wird, bestimmst du durch deine Einstellungen. Du hast die Möglichkeit, einen Einkaufspreis einzutragen oder bei Wareneingängen z.B. den Einkaufspreis des aktuellen Wareneingangs an Varianten und Lieferant:innen zu übertragen. Außerdem kannst du ebenfalls einen weiteren Durchschnittseinkaufspreis übertragen. Hierbei handelt es sich um eine Art Live-Durchschnittseinkaufspreis. Welche Einstellungsoptionen du hast, um den Einkaufspreis zu übertragen, wird im nächsten Kapitel, <<#300, Lagerort und Einkaufspreis übertragen>>, beschrieben. +
+Die Einstellungen zum Einkaufspreis in plentymarkets sind vielfältig.
+In Varianten werden dir zwei verschiedene Einkaufspreise angezeigt. Ein Feld zeigt immer den gleitenden Einkaufspreis. Welcher Einkaufspreis im 2. Feld angezeigt wird, bestimmst du durch deine Einstellungen. Du hast die Möglichkeit, einen Einkaufspreis einzutragen oder bei Wareneingängen z.B. den Einkaufspreis des aktuellen Wareneingangs an Varianten und Lieferant:innen zu übertragen. Außerdem kannst du ebenfalls einen weiteren Durchschnittseinkaufspreis übertragen. Hierbei handelt es sich um eine Art Live-Durchschnittseinkaufspreis. Welche Einstellungsoptionen du hast, um den Einkaufspreis zu übertragen, wird im nächsten Kapitel, <<#300, Lagerort und Einkaufspreis übertragen>>, beschrieben. +
 Die Berechnung der 2 unterschiedlichen Durchschnittseinkaufspreise wird im Folgenden erläutert.
 
 [[tabelle-durchschnittseinkaufspreis-berechnen]]
 .Formeln Durchschnittseinkaufspreis
-[cols="1,1"]
+[cols="1a,1a"]
 |====
 |Livedurchschnittsberechnung |Berechnung gleitender Durchschnittseinkaufspreis
 
