TEST Formeln rendering

--- a/docs/de-de/modules/maerkte/pages/spielwiese.adoc
+++ b/docs/de-de/modules/maerkte/pages/spielwiese.adoc
@@ -4,6 +4,7 @@
 :description: Testseite für Formatierungen
 :page-index: false
 :id: IAGOJV9
+:stem:
 
 Diese Seite ist nicht Teil des Handbuchs. Aber falls du trotzdem auf dieser Seite gelandet bist: Hallo und herzlich willkommen. Diese Seite ist nur eine Testseite, auf der wir Handbuch-Formatierungen ausprobieren - damit unser Handbuch immer besser wird.
 
@@ -46,3 +47,37 @@ This content is revealed by default.
 
 If it's taking up too much space, the reader can hide it.
 ====
+
+== Formeln
+
+stem:[sqrt(4) = 2]
+
+latexmath:[C = \alpha + \beta Y^{\gamma} + \epsilon]
+
+stem:[sum_(i=1)^n i^3=((n(n+1))/2)^2]
+
+---
+
+latexmath:[LDEK_{neu} = {LDEK_{alt} \cdot Menge_{alt} + EK_{neu} \cdot Menge_{neu}\over Menge_{alt} + Menge_{neu}}] +
+
+latexmath:[LDEK_{neu} = {LDEK_{alt} \cdot Menge_{alt} + EK_{neu} \cdot Menge_{neu}\over Menge_{alt} + Menge_{neu}}] +
+
+---
+
+latexmath:[GLD_{neu} = {GLD_{alt} \cdot Menge_{alt} + EK_{neu} \cdot Menge_{neu}\over Menge_{alt} + Menge_{neu}}] +
+
+latexmath:[GLD_{neu} = {GLD_{alt} \cdot Menge_{alt} + EK_{neu} \cdot Menge_{neu}\over Menge_{alt} + Menge_{neu}}] +
+
+---
+
+latexmath:[\mbox{Dynamischer Meldebestand} = {(\mbox{Ø Abverkauf} \cdot \mbox{Lagerreichweite}) + (\mbox{Ø Abverkauf} \cdot \mbox{kürzeste Lieferzeit})}]
+
+latexmath:[\mbox{Dynamischer Meldebestand} = {(\mbox{Ø Abverkauf} \cdot \mbox{Lagerreichweite}) + (\mbox{Ø Abverkauf} \cdot \mbox{kürzeste Lieferzeit})}]
+
+---
+
+latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobestand} + (\mbox{nachbestellte Menge})}]
+
+latexmath:[\mbox{MeldΔ} = {(\mbox{dynamischer Meldebestand} - (\mbox{Nettobestand} + (\mbox{nachbestellte Menge})}]
+
+---
