add icon to page

--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -119,7 +119,7 @@ Einstellungen vornehmen:
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links.
 . Tippe unten auf *Einstellungen* (icon:settings[set=material]). +
 → Das Einstellungsmenü öffnet sich.
-. Tippe auf *Rollende Kommissionierung*.
+. Tippe auf *Rollende Kommissionierung* (image:warenwirtschaft:icon_box-picking.png[width=24, height=24]).
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<table-pw-settings-box-picking>>.
 
 [[table-pw-settings-box-picking]]
@@ -211,7 +211,7 @@ Anzahl der Boxen festlegen:
 . xref:warenwirtschaft:installation-und-ersteinrichtung.adoc#300[Logge dich in plentyWarehouse ein].
 . Tippe auf das Menüsymbol (icon:bars[role="darkGrey"]) oben links. +
 icon:map-signs[] *_Oder:_*: Finde die Kachel *Rollende Kommissionierung* im Bereich *Funktionen* auf dem Dashboard.
-. Tippe auf *Rollende Kommissionierung*. +
+. Tippe auf *Rollende Kommissionierung* (image:warenwirtschaft:icon_box-picking.png[width=24, height=24]). +
 → Der Startbildschirm wird angezeigt.
 . Tippe auf das Plus oder Minus, um die xref:warenwirtschaft:rollende-kommissionierung.adoc#intable-default-boxes[vordefinierte Anzahl der Boxen] zu erhöhen oder zu verringern.
 . Tippe auf *Start*, um fortzufahren. +
