--- a/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
+++ b/docs/de-de/modules/fulfillment/pages/package-content-list-2-0.adoc
@@ -243,11 +243,11 @@ Palette erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen* und wähle die Option *Palette erstellen*. +
-*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:plus[role="darkGrey"] *Transporteinheit hinzufügen* > icon:plus[role="darkGrey"] *Paket erstellen*.
+. Klicke oben auf icon:add[set=material] *Inhalt hinzufügen* und wähle die Option *Palette erstellen*. +
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:add[set=material] *Transporteinheit hinzufügen* > icon:add[set=material] *Paket erstellen*.
 → Das Fenster *Neue Palette erstellen* wird geöffnet.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-pallet>>.
-. Klicke auf icon:plus[role="darkGrey"] *Palette erstellen*. +
+. Klicke auf icon:add[set=material] *Palette erstellen*. +
 → Die Palette wird erstellt.
 
 [[table-create-new-pallet]]
@@ -357,12 +357,12 @@ Paket erstellen:
 . Suche den Auftrag anhand der Filtereinstellungen. Beachte dazu die Erläuterungen in <<#search-orders, Aufträge suchen>>. +
 → Die Aufträge, die den eingestellten Suchkriterien entsprechen, werden angezeigt.
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
-. Klicke oben auf icon:plus[role="darkGrey"] *Inhalt hinzufügen*.
+. Klicke oben auf icon:add[set=material] *Inhalt hinzufügen*.
 . Wähle die Option *Paket erstellen*. +
 → Das Fenster *Neues Paket erstellen* wird geöffnet. +
-*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:plus[role="darkGrey"] *Transporteinheit hinzufügen* > icon:plus[role="darkGrey"] *Paket erstellen*.
+*_Oder:_* Klicke links in der Navigation neben dem Auftrag auf die weiteren Optionen (icon:more_vert[set=material]) und wähle die Option icon:add[set=material] *Transporteinheit hinzufügen* > icon:add[set=material] *Paket erstellen*.
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-create-new-package>>.
-. Klicke auf icon:plus[role="darkGrey"] *Paket erstellen*. +
+. Klicke auf icon:add[set=material] *Paket erstellen*. +
 → Das Paket wird erstellt.
 
 
@@ -402,7 +402,7 @@ Artikel verpacken:
 . Klicke in die Zeile des Auftrags, um den Auftrag zu öffnen.
 . Klicke auf das Paket, um die Artikel anzuzeigen.
 . Setze links im Bereich *Unverpackte Artikel* ein Häkchen (icon:check_box[set=material, role=skyBlue]) neben den Artikeln, die du dem Paket hinzufügen möchtest.
-. Klicke auf icon:plus[role="darkGrey"] *Artikel zum Paket hinzufügen*. +
+. Klicke auf icon:add[set=material] *Artikel zum Paket hinzufügen*. +
 → Die Artikel werden in den Bereich *Verpackte Artikel* verschoben und somit dem Paket hinzugefügt.
 
 [TIP]
@@ -473,7 +473,7 @@ Schnelles Packen verwenden:
 . Klappe links die Artikeleinstellungen auf (icon:chevron_right[set=material]).
 . Nimm die Einstellungen vor. Beachte dazu die Erläuterungen in <<#table-quick-packing>>. +
 *_Hinweis:_* Gibt es eine Restmenge an Artikeln, die nicht verpackt werden kann, kannst du wählen, ob die übrigen Artikel in ein weiteres Paket gepackt werden sollen, oder ob du die Artikel unverpackt lassen möchtest.
-. Klicke anschließend auf icon:plus[role="green"] *Hinzufügen*. +
+. Klicke anschließend auf icon:add[set=material, role=green] *Hinzufügen*. +
 → Die Artikel werden den Einstellungen entsprechend gepackt.
 
 [[table-quick-packing]]
