--- a/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
+++ b/docs/de-de/modules/warenwirtschaft/pages/rollende-kommissionierung.adoc
@@ -6,11 +6,11 @@
 include::partial$hinweis-voraussetzungen.adoc[]
 include::partial$hinweis-offene-beta.adoc[]
 
-Mit der rollenden Kommissionierung können deine Mitarbeiter:innen im Lager mehrere Aufträge gleichzeitig picken und versandfertig vorsortiert an den Packtisch liefern.
+Mit der rollenden Kommissionierung kann dein Lagerpersonal die benötigten Artikel für mehrere Aufträge gleichzeitig picken und anschließend versandfertig vorsortiert an den Packtisch liefern.
 
 Die plentyWarehouse App bietet dir eine überarbeitete und optimierte Funktion zur rollenden Kommissionierung. Auf dieser Handbuchseite findest du alle notwendigen Informationen.
 
-Zunächst folgt eine <<#100, kurze Beschreibung der rollenden Kommissionierung>>, die den Ablauf erklärt. Danach werden die <<#200, Einstellungen>> beschrieben, die du im Voraus vornehmen solltest. Diese Einstellungen greifen dann später, wenn du die <<#800, Funktion nutzt>>.
+Lies zuerst eine <<#100, kurze Beschreibung der rollenden Kommissionierung>>, die den Ablauf erklärt. Danach werden die <<#200, Einstellungen>> beschrieben, die du im Voraus vornehmen solltest. Diese Einstellungen greifen dann später, wenn du die <<#800, Funktion nutzt>>.
 
 [#100]
 == Wie funktioniert die rollende Kommissionierung?
@@ -165,7 +165,7 @@ Einstellungen vornehmen:
 
 2+^| Bereich *Artikelerfassung*
 
-| *Scan verpflichtend*
+| *Artikel-Scan verpflichtend*
 |Verwende diese Option, um festzulegen, welche Regeln für das Erfassen von Artikeln während der rollenden Kommissionierung gelten sollen. +
 *Aktiviert* (icon:toggle-on[role="green"]) = Alle Artikel _müssen_ über ihr Etikett gescannt werden, um kommissioniert zu werden. Eine manuelle Auswahl von Artikeln über die Suche ist nicht möglich. +
 *Deaktiviert* (icon:toggle-off[role="darkGrey"]) = Artikel können entweder per Scan oder per manueller Auswahl hinzugefügt werden.
@@ -176,12 +176,12 @@ Einstellungen vornehmen:
 
 2+^| Bereich *Box-Auswahl*
 
-| *Lagerortsuchfelder*
+| *Box-Suchfelder*
 |Verwende die Umschaltflächen, um festzulegen, welche Kriterien während der rollenden Kommissionierung zur Suche nach Boxen genutzt werden sollen. Die Optionen *Barcode* und *Lagerortname* stehen zur Verfügung. +
 *Aktiviert* (icon:toggle-on[role="green"]) = Es wird möglich sein, Lagerorte anhand dieses Kriteriums zu suchen. +
 *_Tipp:_* Tippe und halte (icon:drag_handle[set=material]) für jedes aktivierte Suchkriterium, um die Reihenfolge der angezeigten Suchfelder anzupassen.
 
-| *Fokus auf Lagerortsuchfeld*
+| *Fokus auf Box-Suchfeld*
 |Wirst du typischerweise die Box auswählen, indem du den Barcode der Box scannst oder indem du nach dem Namen der Box suchst und dann den passenden Eintrag aus einer Liste wählst? Falls du den Barcode scannen möchtest, kann diese Einstellung deine Arbeit beschleunigen. +
 *Kein Feld* = Der Mauszeiger wird in keinem Feld platziert. Natürlich ist es später trotzdem möglich, den Mauszeiger manuell in einem Feld zu platzieren. +
 *Barcode* = Dein Mauszeiger beginnt automatisch in dem Barcodefeld, wenn du eine Box auswählst. Das kann die Auswahl der Box beschleunigen.
@@ -197,13 +197,13 @@ Nachdem du alle vorbereitenden Einstellungen vorgenommen hast, kannst du die ple
 [IMPORTANT]
 .Stehen Aufträge bereit?
 ====
-Aufträge werden nur mit der App kommissioniert, wenn sie die Kriterien aus den <<#700, Einstellungen>> erfüllen, also wenn sie sich auf das richtige Lager beziehen und sich aktuell im ausgewählten Ausgangsstatus befinden. Erfüllen zur Zeit keine Aufträge diese Kriterien, sind keine Aufträge für die rollende Kommissionierung verfügbar.
+Aufträge können nur mit plentyWarehouse kommissioniert werden, wenn sie die Kriterien aus den <<#700, Einstellungen>> erfüllen. Die Aufträge müssen sich also auf das richtige Lager beziehen und sich aktuell im gewählten Ausgangsstatus befinden. Erfüllen keine Aufträge diese Kriterien, sind in plentyWarehouse auch keine Aufträge für die rollende Kommissionierung verfügbar.
 ====
 
 [#900]
 === Anzahl der Boxen festlegen
 
-Lege zuerst fest, mit wie vielen Boxen du arbeiten möchtest, d.h. wie viele Aufträge gleichzeitig kommissioniert werden sollen.
+Lege zuerst fest, mit wie vielen Boxen du arbeiten möchtest, also wie viele Aufträge gleichzeitig kommissioniert werden sollen.
 
 [.instruction]
 Anzahl der Boxen festlegen:
@@ -225,13 +225,14 @@ plentymarkets erstellt automatisch eine Auflistung aller Artikel, die nun im Lag
 
 Die Liste enthält wichtige Informationen zu den Artikeln, die gepickt werden sollen. Das Lagerpersonal sieht nicht nur, wie viele Exemplare eines Artikels gepickt werden sollen, sondern auch den Artikelnamen und den Lagerort des Artikels.
 
-Nun läuft das Lagerpersonal mit dem Kommissionierwargen zum Lagerort des ersten Artikels. Dort angekommen, scannt das Lagerpersonal den Barcode des ersten Artikels. Alternativ kann in der App auf den Artikel getippt werden.
+Nun läuft das Lagerpersonal mit dem Kommissionierwargen zum Lagerort des ersten Artikels. Dort angekommen, scannt das Lagerpersonal zuerst den Barcode des Lagerorts. Dann wird der Barcode des ersten Artikels. //TODO: Link zur Scanpflicht-Option Alternativ kann in der App auf den Artikel getippt werden.
 
 [.instruction]
 Mit der Artikelliste arbeiten:
 
 . Schaue auf die Liste, um herauszufinden, wo der Artikel gelagert wird.
-. Laufe mit dem Kommissionierwagen zum Artikel.
+. Laufe mit dem Kommissionierwagen zum Lagerort, auf dem der Artikel sich befindet.
+. Scanne den Barcode des Lagerorts oder tippe in der App auf den Lagerort.
 . Scanne den Barcode des Artikels oder tippe in der App auf den Artikel.
 
 [#1100]
@@ -248,7 +249,7 @@ Manche Aufträge enthalten mehr als nur einen Artikel. Hast du bereits den erste
 [#1200]
 === Artikel picken
 
-plentyWarehouse zeigt dir einige wichtige Informationen zum Pickvorgang an. Somit siehst du die Anzahl der Artikel, die gepickt werden sollen, so wie den Lagerort, an dem sich die Artikel befinden.
+plentyWarehouse zeigt dir einige wichtige Informationen zum Stand der Kommissionierung an. an. Somit siehst du die Anzahl der Artikel, die gepickt werden sollen, so wie den Lagerort, an dem sich die Artikel befinden.
 
 [.instruction]
 Artikel picken:
@@ -269,7 +270,7 @@ Artikel picken:
 
 Während du <<#1200, Artikel pickst>>, kann es zu Sonderfällen kommen. Beispielsweise kann es sein, dass du einen Artikel ans Ende der Liste verschieben möchtest, weil du erst später am Lagerort des Artikels ankommst. Oder es kommt vor, dass ein Artikel am Lagerort nicht vorrätig ist oder du eine Notiz mit einem Hinweis zum Auftrag hinterlassen möchtest.
 
-Für solche Fälle werden dir in der Ansicht des jeweiligen Artikels Shortcuts angezeigt, mit denen du diese Aktionen schnell durchführen kannst. <<table-box-picking-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
+Für solche Fälle findest du in der Ansicht des jeweiligen Artikels Shortcuts, mit denen du diese Aktionen schnell durchführen kannst. <<table-box-picking-shortcuts>> enthält weitere Informationen zu den verfügbaren Shortcuts.
 
 [[table-box-picking-shortcuts]]
 .Verfügbare Shortcuts in der Artikelansicht
